# horse_racing_web_scraper

./: README.MD  pyproject.toml
assets/: bot_xpaths.txt  scraper_xpaths.txt
src/: bot.py  main.py  scraper.py
